# Launchpad-Lights

./: CMakeLists.txt  ColorPage.h  DirectMapping.cpp  LaunchpadIn.cpp  LaunchpadOut.cpp  Makefile  Mapping.h  Page.cpp  Page.h  SequencerMapping.h  SequencerPage.cpp  Stripe.cpp
client/: CMakeLists.txt  MidiClient.cpp  MidiClient.h
client/color/: colorclient.py
client/color/html/: index.html  lights.js
client/color/static/css/: style.css
client/color/static/js/: cytoscape.js  lights.js
client/color/templates/: cytoscape.js.save  index.html  main.html
client/midi/: CMakeLists.txt  MidiClient.cpp  MidiClient.h
cmake/: FindRTMidi.cmake
include/: Color.h  ColorPage.h  DirectMapping.h  LaunchpadIn.h  LaunchpadOut.h  Mapping.h  Page.h  SequencerMapping.h  SequencerPage.h  ServerIn.h  SnakePage.h  Stripe.h
lib/json/: json.hpp
src/: CMakeLists.txt  Color.cpp  Color.h  ColorPage.cpp  DirectMapping.cpp  LaunchpadIn.cpp  LaunchpadOut.cpp  Mapping.cpp  Page.cpp  SequencerMapping.cpp  SequencerPage.cpp  ServerIn.cpp  SnakePage.cpp  Stripe.cpp  Stripe.h  main.cpp
src/device/: Device.cpp  Device.h  DeviceOut.h  Launchpad.cpp  Launchpad.h  LaunchpadIn.cpp  LaunchpadIn.h  LaunchpadOut.cpp  LaunchpadOut.h  Server.cpp  Server.h  ServerIn.cpp  ServerIn.h
src/lights/: LedPwm.cpp  LedPwm.h  LedRemote.cpp  LedRemote.h  Light.h  LightBluetooth.cpp  LightBluetooth.h  LightGroup.h
src/mapping/: DirectMapping.cpp  DirectMapping.h  Mapping.cpp  Mapping.h  SequencerMapping.cpp  SequencerMapping.h
src/mapping/page/: ColorPage.cpp  ColorPage.h  Page.cpp  Page.h  SequencerPage.cpp  SequencerPage.h  SnakePage.cpp  SnakePage.h
src/transport/: ColorServer.cpp  ColorServer.h  MidiLocal.cpp  MidiLocal.h  MidiServer.cpp  MidiServer.h  Transport.cpp  Transport.h
src/util/: Color.cpp  Color.h  UString.h
